UtahLiveDataTest/src/objects/MSPPaymentSchedule__c.object
<CustomObject>
    <fields>
        <fullName>FinalApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Final Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MSP_Payment_Schedules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FirstApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MSP_Payment_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideCreatePayment__c</fullName>
        <formula>TEXT(Status__c) != &apos;Created&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideCreatePayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideRecreatePayment__c</fullName>
        <formula>AND(TEXT(Status__c) != &apos;Payment Requests Created&apos;, TEXT(Status__c) != &apos;Rejected&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideRecreatePayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideViewBtn__c</fullName>
        <formula>TEXT(Status__c) = &apos;Created&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideViewBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSPFileBatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSP File Batch</label>
        <referenceTo>FileBatch__c</referenceTo>
        <relationshipLabel>MSP Payment Schedules</relationshipLabel>
        <relationshipName>MSP_Payment_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pathway__c</fullName>
        <label>Pathway</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MSP</fullName>
                </value>
                <value>
                    <fullName>1-12th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScheduleDate__c</fullName>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Payment Requests Created</fullName>
                </value>
                <value>
                    <fullName>First Approved</fullName>
                </value>
                <value>
                    <fullName>Final Approved</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Sent to FINET</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
                <value>
                    <fullName>First Approval</fullName>
                </value>
                <value>
                    <fullName>Payments Created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MSP Payment Schedule</label>
    <nameField>
        <label>MSP Payment Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSP Payment Schedules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>